# burr

./: .asf.yaml  .buildinfo  .gitignore  .htaccess  CNAME  README.md  pyproject.toml  robots.txt
.doctrees/: environment.pickle  index.doctree  main.doctree
.doctrees/asf/: index.doctree
.doctrees/concepts/: actions.doctree  additional-visibility.doctree  hooks.doctree  index.doctree  overview.doctree  parallelism.doctree  planned-capabilities.doctree  recursion.doctree  sdlc.doctree  serde.doctree  state-machine.doctree  state-persistence.doctree  state-typing.doctree  state.doctree  streaming-actions.doctree  sync-vs-async.doctree  tracking.doctree  transitions.doctree
.doctrees/contributing/: architecture.doctree  contributing.doctree  index.doctree  iterating.doctree  setup.doctree
.doctrees/examples/: index.doctree
.doctrees/examples/agents/: agent-patterns.doctree  divide-and-conquer.doctree  index.doctree
.doctrees/examples/chatbots/: basic-chatbot.doctree  gpt-like-chatbot.doctree  index.doctree  rag-chatbot-hamilton.doctree
.doctrees/examples/data-science/: index.doctree  ml_training.doctree  simulation.doctree
.doctrees/examples/deployment/: index.doctree  infrastructure.doctree  monitoring.doctree  web-server.doctree
.doctrees/examples/guardrails/: creating_tests.doctree  index.doctree
.doctrees/examples/simple/: choose-your-own-adventure.doctree  counter.doctree  cowsay.doctree  index.doctree
.doctrees/getting_started/: index.doctree  install.doctree  simple-example.doctree  up-next.doctree  why-burr.doctree
.doctrees/reference/: actions.doctree  application.doctree  conditions.doctree  index.doctree  lifecycle.doctree  parallelism.doctree  persister.doctree  serde.doctree  state.doctree  tracking.doctree  typing.doctree  visibility.doctree
.doctrees/reference/integrations/: hamilton.doctree  haystack.doctree  index.doctree  langchain.doctree  opentelemetry.doctree  pydantic.doctree  ray.doctree  streamlit.doctree  traceloop.doctree
.github/workflows/: build-site.yml  docs.yml  sphinx-docs.yml
_sources/: index.rst.txt  main.rst.txt
_sources/concepts/: actions.rst.txt  additional-visibility.rst.txt  index.rst.txt  overview.rst.txt  state-typing.rst.txt  streaming-actions.rst.txt  sync-vs-async.rst.txt  transitions.rst.txt
_sources/contributing/: architecture.rst.txt  contributing.rst.txt
_sources/examples/: index.rst.txt
_sources/examples/agents/: agent-patterns.md.txt  index.rst.txt
_sources/examples/deployment/: infrastructure.rst.txt  web-server.rst.txt
_sources/examples/simple/: index.rst.txt
_sources/getting_started/: index.rst.txt
_sources/reference/: conditions.rst.txt  lifecycle.rst.txt  parallelism.rst.txt  state.rst.txt  tracking.rst.txt  visibility.rst.txt
_sources/reference/integrations/: index.rst.txt  pydantic.rst.txt  streamlit.rst.txt  traceloop.rst.txt
_static/: testimonials.css
burr/: telemetry.py
burr/cli/: __main__.py
burr/common/: async_utils.py
burr/core/: __init__.py  action.py  application.py  graph.py  state.py
burr/integrations/: base.py  opentelemetry.py  pydantic.py
burr/tracking/: client.py
burr/tracking/server/: backend.py  (+1 more)
concepts/additional-visibility/: index.html
concepts/overview/: index.html
concepts/parallelism/: index.html
concepts/serde/: index.html
concepts/state-machine/: index.html
concepts/state-typing/: index.html
concepts/streaming-actions/: index.html
concepts/sync-vs-async/: index.html
concepts/tracking/: index.html
concepts/transitions/: index.html
content/: 404.html  index.html  index.txt
content/asf/: index.html
content/concepts/: index.html
content/contributing/: index.html
content/docs/: index.html  objects.inv  searchindex.js  sitemap.xml
content/examples/: index.html
content/genindex/: index.html
content/getting_started/: index.html
content/main/: index.html
content/py-modindex/: index.html
content/reference/: index.html
content/search/: index.html
contributing/contributing/: index.html
docs/: conf.py
docs/_static/: custom.css
docs/_templates/: page.html
docs/concepts/: parallelism.rst  tracking.rst
docs/reference/: index.rst
examples/: fastapi_mount_example.py
examples/adaptive-crag/: README.md  requirements.txt
examples/agents/: index.html
examples/chatbots/: index.html
examples/custom-serde/: requirements.txt
examples/guardrails/: index.html
examples/hamilton-integration/: notebook.ipynb  requirements.txt
examples/hello-world-counter/: requirements.txt  server.py
examples/image-telephone/: README.md  requirements.txt
examples/instructor-gemini-flash/: requirements.txt
examples/llm-adventure-game/: requirements.txt
examples/ml-training/: README.md
examples/multi-agent-collaboration/: README.md  requirements.txt
examples/multi-modal-chatbot/: burr_demo.ipynb
examples/openai-compatible-agent/: requirements.txt
examples/opentelemetry/: README.md  notebook.ipynb
examples/parallelism/: README.md  notebook.ipynb
examples/pytest/: README.md  requirements.txt
examples/rag-lancedb-ingestion/: application.py  ingestion.py  requirements.txt
examples/recursive/: README.md  requirements.txt
examples/simple-chatbot-intro/: notebook.ipynb
examples/simulation/: README.md
examples/streaming-fastapi/: README.md  notebook.ipynb
examples/test-case-creation/: README.md
examples/tool-calling/: requirements.txt
examples/tracing-and-spans/: README.md  burr_otel_demo.ipynb  requirements.txt
examples/web-server/: README.md
examples/youtube-to-social-media-post/: notebook.ipynb
genindex/: index.html
getting_started/why-burr/: index.html
main/: index.html
reference/lifecycle/: index.html
reference/serde/: index.html
reference/typing/: index.html
search/: index.html
telemetry/ui/: .gitignore  package-lock.json  package.json
tests/core/: test_action.py  test_application.py  test_persistence.py
tests/integrations/: test_burr_pydantic.py
tests/tracking/: test_local_tracking_client.py
website/: .gitignore  next.config.js  package-lock.json  package.json
(+299 files in other folders)
